Refactor seperate tools from handlers in user_data_fetch
